--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
-  "name": "bepro token price",
+  "name": "__MSG_appName__",
   "version": "1.1",
   "manifest_version": 2,
-  "description": "Displays bepro token information when you click the icon",
+  "description": "__MSG_appDesc__",
   "homepage_url": "https://github.com/felixfreyer/bepro-chrome-extension",
   "icons": {
     "16": "icons/icon16.png",
